fixed situation where column overflow-y wasn't initialized + refactoring

--- a/dzieuo.css
+++ b/dzieuo.css
@@ -9,12 +9,12 @@
   overflow-x: hidden;
   overflow-y: hidden;
   height: 100%;
+  width:100%;
 }
 
 .dz-column {
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
   position: absolute;
   top: 0;
   left: 0;
